# kalfon-dotfiles

./: .entry  .functions  .gitignore  .p10k  AGENTS.md  Brewfile  CLAUDE.md  Makefile  README.md  flake.nix  install.sh
.github/workflows/: ci.yml  release.yml
aliases/: aws.zsh
crates/aws-switch/: Cargo.toml  aws-switch.example.toml  config.toml
crates/aws-switch/src/: aws.rs  main.rs
crates/common/: Cargo.toml
crates/common/src/: cache.rs  config.rs  lib.rs  picker.rs  refresh.rs  spinner.rs  term.rs  theme.rs  xdg.rs
crates/feature/: Cargo.toml  config.toml  feature.example.toml
crates/feature/src/: adf.rs  config.rs  filter.rs  jira.rs  main.rs  markdown.rs  tracker.rs  ui.rs
crates/wt-gc/: Cargo.toml  config.toml
crates/wt-gc/src/: git.rs  model.rs  trash.rs
init/: fzf.zsh
k9s/: views.yaml
p10k/: 1-kubernetes.zsh  2-aws.zsh
system/macos/cursor-merge-windows/: com.itayka.cursor-merge-windows.plist  merge.applescript  watcher.sh
tools/: Cargo.toml  Makefile
tools/crates/feature/src/: main.rs  ui.rs  vcs.rs
tools/crates/wt-gc/src/: config.rs  main.rs
vars/: fzf.zsh  locale.zsh
zsh/aliases/: kubernetes.zsh  terraform.zsh
zsh/functions/: aws-sync-prompt.zsh  dev-clone.zsh
zsh/p10k/: 1-kubernetes.zsh  2-aws.zsh
zsh/vars/: path.zsh
