[package]
name = "aws-switch"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "aws-switch"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
dirs.workspace = true
ureq.workspace = true
