[package]
name = "common"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
ratatui.workspace = true
crossterm.workspace = true
nucleo-matcher.workspace = true
toml.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
dirs.workspace = true
