[package]
name = "feature"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[[bin]]
name = "feature"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
ratatui.workspace = true
crossterm.workspace = true
nucleo-matcher.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
clap.workspace = true
pulldown-cmark.workspace = true
